--- a/views/reservations.html
+++ b/views/reservations.html
@@ -128,13 +128,13 @@
 
   <form>
     <label for="date" class="rvt-label">Enter the date of the study room reservation:</label><br>
-    <input type="date" id="date" name="date" class="rvt-label" required><br></br>
+    <input type="date" id="date" name="date" class="rvt-label"><br></br>
 
   <label for="time" class="rvt-label">Select the time of the reservation:</label><br>
-  <input type="time" id="time" name="time" class="rvt-label" required><br></br>
+  <input type="time" id="time" name="time" class="rvt-label"><br></br>
  
   <label for="numpeople" class="rvt-label">Select the number of people in the reservation:</label><br>
-      <input list="numpeople" name="numpeople" placeholder="Select people in reservation" required><br></br>
+      <input list="numpeople" name="numpeople" placeholder="Select people in reservation"><br></br>
       <datalist id="numpeople">
         <option value="1">
         <option value="2">
@@ -147,7 +147,7 @@
         </datalist>
   
       <label for="studyrooms" class="rvt-label">Select a study room number:</label><br>
-      <input list="studyrooms" name="studyrooms" placeholder="Select a study room" required><br></br>
+      <input list="studyrooms" name="studyrooms" placeholder="Select a study room"><br></br>
       <datalist id="studyrooms">
         <option value="KA116">
         <option value="KA118">
