--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -122,11 +122,11 @@
     <input type="text" id="name" name="name" class="rvt-label" placeholder="John Doe" maxlength=30 required><br>
     <br/>
     <label for="idnum" class="rvt-label">Student ID Number</label><br>
-    <input type="number" id="idnum" name="idnum" class="rvt-label" placeholder="0123456789" maxlength=10 required><br><br>
+    <input type="number" id="idnum" name="idnum" class="rvt-label" placeholder="0123456789" maxlength=10><br><br>
     <label for="email" class="rvt-label"></label>IU Email Address<br>
-    <input type="text" id="email" name="email" class="rvt-label" placeholder="student@iu.edu" required> <br><br>
+    <input type="text" id="email" name="email" class="rvt-label" placeholder="student@iu.edu"> <br><br>
     <label for="reservation" class="rvt-label">Reservation Name (To Appear on Door)</label><br>
-    <input type="text" id="reservation" name="reservation" class="rvt-label" placeholder="John Doe" required><br><br>
+    <input type="text" id="reservation" name="reservation" class="rvt-label" placeholder="John Doe"><br><br>
     <a href = "/reservations"><button class="rvt-button">Go Back </button></a>  <a href="/confirmation"><button class="rvt-button rvt-button--success">Submit </button></a>  
     <br/>
 </form>
