--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -119,7 +119,7 @@
     <p>Please enter the following information:</p>
   <form>
     <label for="name" class="rvt-label">First and Last Name</label><br>
-    <input type="text" id="name" name="name" class="rvt-label" placeholder="John Doe" maxlength=30 required><br>
+    <input type="text" id="name" name="name" class="rvt-label" placeholder="John Doe" maxlength=30><br>
     <br/>
     <label for="idnum" class="rvt-label">Student ID Number</label><br>
     <input type="number" id="idnum" name="idnum" class="rvt-label" placeholder="0123456789" maxlength=10><br><br>
