--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -131,8 +131,10 @@
     <br/>
     
 </form>
+<form>
 <a href = "/reservations"><button class="rvt-button">Go Back </button></a>  <a href="/confirmation"><button class="rvt-button rvt-button--success">Submit </button></a>  
-  </body>
+</form>  
+</body>
 
     <footer class="rvt-footer-base">
         <div class="rvt-container-lg">
