--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -131,9 +131,9 @@
     <br/>
     
 </form>
-<form>
+<div>
 <a href = "/reservations"><button class="rvt-button">Go Back </button></a>  <a href="/confirmation"><button class="rvt-button rvt-button--success">Submit </button></a>  
-</form>  
+</div>
 </body>
 
     <footer class="rvt-footer-base">
