--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -119,14 +119,14 @@
     <p>Please enter the following information:</p>
   <form>
     <label for="name" class="rvt-label">First and Last Name</label><br>
-    <input type="text" id="name" name="name" class="rvt-label" placeholder="John Doe" maxlength=30><br>
+    <input type="text" id="name" name="name" class="rvt-label" placeholder="John Doe" maxlength=30 required><br>
     <br/>
     <label for="idnum" class="rvt-label">Student ID Number</label><br>
-    <input type="number" id="idnum" name="idnum" class="rvt-label" placeholder="0123456789" maxlength=10><br><br>
+    <input type="number" id="idnum" name="idnum" class="rvt-label" placeholder="0123456789" maxlength=10 required><br><br>
     <label for="email" class="rvt-label"></label>IU Email Address<br>
-    <input type="text" id="email" name="email" class="rvt-label" placeholder="student@iu.edu"> <br><br>
+    <input type="text" id="email" name="email" class="rvt-label" placeholder="student@iu.edu" required> <br><br>
     <label for="reservation" class="rvt-label">Reservation Name (To Appear on Door)</label><br>
-    <input type="text" id="reservation" name="reservation" class="rvt-label" placeholder="John Doe"><br><br>
+    <input type="text" id="reservation" name="reservation" class="rvt-label" placeholder="John Doe" required><br><br>
    
     <br/>
     
