--- a/views/reservations.html
+++ b/views/reservations.html
@@ -163,7 +163,9 @@
         
     </br>
   </form>
+  <div>
   <a href = "/"><button class="rvt-button">Go Back </button></a> <a href="/studentinfo"><button class="rvt-button rvt-button--success">Continue </button></a><br><br>
+</div>
 </body>
 
 <footer class="rvt-footer-base">
