--- a/views/index.html
+++ b/views/index.html
@@ -97,18 +97,298 @@
 
     <!--Main content area-->
 
-    <body>
-        <!-- required for rivets to work where compenents are being pulled -->
-        <script src="https://unpkg.com/rivet-core@2.0.0-beta/js/rivet.min.js"></script>
-        <script>Rivet.init();</script>
+    <main id="main-content" class="rvt-layout__wrapper">
+
+        <div class="rvt-hero">
+            
+            <div class="rvt-p-top-3-l-md-up rvt-p-bottom-4-xl-md-up">
+            
+                <h1 class="rvt-hero__title">Welcome to IU Kokomo Library Study Room Scheduler</h1>
         
-        <h1>Welcome Page</h1> <br></br>
-      
-        <!-- input text box for date -->
-        
-        <div>
-          <a href = "/reservations"><button class="rvt-button">Reservations</button></a> <a href="/cancellation"><button class="rvt-button rvt-button--success">Cancellations </button></a>
+                <!-- Reservation/Cancellation buttons -->
+                <div class="rvt-border-all rvt-m-top-md rvt-p-all-md rvt-shadow-heavy rvt-p-all-lg rvt-m-bottom-lg">
+                    
+                    <a href="reservations.html" class="rvt-button">Reserve a Study Room</a>
+    
+                    <a href="cancelation.html" class="rvt-button">Cancel an existing Study Room</a>
+    
+                  </div>
+    
+        <!-- Accordion for policies/guidelines -->
+        <div class="rvt-p-top-3-l-md-up rvt-p-bottom-3-xl-md-up">
+        <div class="rvt-accordion" data-rvt-accordion="test-accordion">
+            <h3 class="rvt-accordion__summary">
+              <button class="rvt-accordion__toggle" id="test-accordion-1-label" data-rvt-accordion-trigger="test-accordion-1">
+                <span class="rvt-accordion__toggle-text">What to Know about Room Scheduling</span>
+                <div class="rvt-accordion__toggle-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                    <g fill="currentColor">
+                      <path class="rvt-accordion__icon-bar" d="M8,15a1,1,0,0,1-1-1V2A1,1,0,0,1,9,2V14A1,1,0,0,1,8,15Z" />
+                      <path d="M14,9H2A1,1,0,0,1,2,7H14a1,1,0,0,1,0,2Z" />
+                    </g>
+                  </svg>
+                </div>
+              </button>
+            </h3>
+            <div class="rvt-accordion__panel" id="test-accordion-1" aria-labelledby="test-accordion-1-label" data-rvt-accordion-panel="test-accordion-1">
+            <p class="rvt-m-all-remove">
+                <ul>
+                <li>Reservations may be made by currently enrolled IU Kokomo students up to one week in advance, but no less than 24 hours in advance.</li>
+                <li>Room reservations must be made using your primary IU email address exactly as listed in the IU Directory. Reservations from other or non-IU email addresses will not be approved.</li>
+                <li>Study room users without reservations must vacate the room when an individual or group with a reservation arrives. A daily schedule of study room reservations will be posted outside each room.</li>
+                <li>No-shows: If the room is not claimed within 15 minutes of the reserved time, the reservation will be cancelled and the study room will be available to others for the remainder of the time reserved.</li>
+                <li>The Library is not responsible for unattended belongings. Materials left unattended in a study room for more than 10 minutes will be removed and taken to the Circulation/Reserves Service Desk.</li>
+                <li>Report any problems with the rooms to the Departmental Secretary, Charla Calvert: KA 233, ccalver@iu.edu, 765-455-9511.</li>
+                </ul>
+            </p>
+            </div>
+            <h3 class="rvt-accordion__summary">
+              <button class="rvt-accordion__toggle" id="test-accordion-2-label" data-rvt-accordion-trigger="test-accordion-2">
+                <span class="rvt-accordion__toggle-text">Instructions</span>
+                <div class="rvt-accordion__toggle-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                    <g fill="currentColor">
+                      <path class="rvt-accordion__icon-bar" d="M8,15a1,1,0,0,1-1-1V2A1,1,0,0,1,9,2V14A1,1,0,0,1,8,15Z" />
+                      <path d="M14,9H2A1,1,0,0,1,2,7H14a1,1,0,0,1,0,2Z" />
+                    </g>
+                  </svg>
+                </div>
+              </button>
+            </h3>
+            <div class="rvt-accordion__panel" id="test-accordion-2" aria-labelledby="test-accordion-2-label" data-rvt-accordion-panel="test-accordion-2">
+            <p class="rvt-m-all-remove">
+                <ul>
+                <li>Click on the "Reserve a Study Room" button</li>
+                <li>Select a date</li>
+                <li>Choose your preferred time</li>
+                <li>Select a specific study room</li>
+                <li>Press "Continue"</li>
+                <li>Fill out the form</li>
+                <li>A notice will be sent confirming your reservation</li>
+                </ul>
+            </p>
+            </div>
+            <h3 class="rvt-accordion__summary">
+              <button class="rvt-accordion__toggle" id="test-accordion-3-label" data-rvt-accordion-trigger="test-accordion-3">
+                <span class="rvt-accordion__toggle-text">Study Room Policy</span>
+                <div class="rvt-accordion__toggle-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                    <g fill="currentColor">
+                      <path class="rvt-accordion__icon-bar" d="M8,15a1,1,0,0,1-1-1V2A1,1,0,0,1,9,2V14A1,1,0,0,1,8,15Z" />
+                      <path d="M14,9H2A1,1,0,0,1,2,7H14a1,1,0,0,1,0,2Z" />
+                    </g>
+                  </svg>
+                </div>
+              </button>
+            </h3>
+            <div class="rvt-accordion__panel" id="test-accordion-3" aria-labelledby="test-accordion-3-label" data-rvt-accordion-panel="test-accordion-3">
+              <p class="rvt-m-all-remove">All study rooms are available for use from the opening of the Library until ten (10) minutes before closing
+                Study rooms are available for IU Kokomo Students only.
+                Reservations accepted Monday – Friday.<br></br>
+                The study rooms below may be reserved for half-hour increments, up to three consecutive hours per day, three times per week (Monday – Friday), per individual or group. When not reserved, and all day on Saturday and Sunday, all study rooms are available on a first-come, first-served basis.
+            </p>
+            </div>
+          </div>
         </div>
+    
+                  <!-- Library Hours table -->
+                  <div class="rvt-box rvt-p-top-2-md-up rvt-p-bottom-3-xl-md-up">
+                      <div class="rvt-box__body">
+                        <div class="rvt-container--center" style="max-width: 35%">
+                            <table class="rvt-table-cells">
+                                <caption class="rvt-sr-only">Library Hours Table</caption>
+                                <thead>
+                                  <tr>
+                                    <th scope="col">Library Hours</th>
+                                    <th scope=""></th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <th scope="row">Mondays</th>
+                                    <td>8:00 a.m. - 9 p.m.</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">Tuesdays</th>
+                                    <td>8:00 a.m. - 9 p.m.</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">Wednesdays</th>
+                                    <td>8:00 a.m. - 9 p.m.</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">Thursdays</th>
+                                    <td>8:00 a.m. - 9 p.m.</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">Fridays</th>
+                                    <td>8:00 a.m. - 5 p.m.</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">Saturdays</th>
+                                    <td>12 - 5 p.m.</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">Sundays</th>
+                                    <td>1 - 7 p.m.</td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                              
+                </div>
+                </div>
+                </div>
+    
+                <!-- Study room description table -->
+                <div class="rvt-box">
+                    <div class="rvt-box__body">
+                      <div class="rvt-container--center" style="max-width: 25%">
+                          <table class="rvt-table-compact">
+                              <caption class="rvt-sr-only">Room Description Table</caption>
+                              <thead>
+                                <tr>
+                                  <th scope="col">Study Room</th>
+                                  <th scope="col">Capacity</th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr>
+                                  <th scope="row">KA 116 – Lobby area</th>
+                                  <td>8</td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">KA 118 – Lobby area</th>
+                                  <td>8</td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">KA 147 – West Commons</th>
+                                  <td>6</td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">KA 149 – West Commons</th>
+                                  <td>6</td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">KA 155 – West Commons</th>
+                                  <td>6</td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">KA 157 – West Commons</th>
+                                  <td>6</td>
+                                </tr>
+                              </tbody>
+                            </table>
+    
+                            <table class="rvt-table-compact">
+                                <caption class="rvt-sr-only">Room Description Table</caption>
+                                <thead>
+                                  <tr>
+                                    <th scope="col">Study Room</th>
+                                    <th scope="col">Capacity</th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <th scope="row">KA 220</th>
+                                    <td>6</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">KA 222</th>
+                                    <td>6</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">KA 224</th>
+                                    <td>6</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">KA 226</th>
+                                    <td>6</td>
+                                  </tr>
+                                </tbody>
+                              </table>
+    
+                              <table class="rvt-table-compact">
+                                <caption class="rvt-sr-only">Room Description Table</caption>
+                                <thead>
+                                  <tr>
+                                    <th scope="col">Study Room</th>
+                                    <th scope="col">Capacity</th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <th scope="row">KA 159 - West Commons</th>
+                                    <td>2</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">KA 160 - West Commons</th>
+                                    <td>2</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">KA 161 - West Commons</th>
+                                    <td>2</td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            
+              </div>
+              </div>
+              </div>
+            </div>
+           
+        </div>
+    
+    </main>
+    
+    
+    <!-- Internal CSS Stylesheet -->
+    <style>
+    
+    .rvt-hero {
+        text-align: center;
+    
+    }
+    
+    .rvt-hero__title {
+        color: #243142;
+    }
+    
+    .rvt-border-all {
+        background-color: #243142;
+    }
+    
+    .rvt-button {
+        height: 45px;
+        padding: 0px 24px;
+        font-size: 24px;
+        line-height: 1.75;
+        color: #EDEBEB;
+        background-color: #990000;
+        border: 1px;
+        border-color: #990000;
+        box-shadow: 0 2px 4px 0 rgb(0 0 0 / 15%);
+    }
+    
+    .rvt-button:hover {
+        background-color: white;
+        color: #900;
+        border: 2px solid #900;
+        transition: background-color .4s ease-out,color .4s ease-out,border-color .4s ease-out;
+    
+      }
+    
+    .rvt-container--center {
+        margin:auto;
+        border: 1px solid #243142;
+    }
+    
+    .rvt-accordion {
+        max-width: 70%;
+        margin:auto;
+        border: 1px solid #243142;
+    }
+    
+    </style>
       
       </body>
 
