--- a/views/index.html
+++ b/views/index.html
@@ -108,9 +108,9 @@
                 <!-- Reservation/Cancellation buttons -->
                 <div class="rvt-border-all rvt-m-top-md rvt-p-all-md rvt-shadow-heavy rvt-p-all-lg rvt-m-bottom-lg">
                     
-                    <a href="reservations.html" class="rvt-button">Reserve a Study Room</a>
+                    <a href="/reservations" class="rvt-button">Reserve a Study Room</a>
     
-                    <a href="cancelation.html" class="rvt-button">Cancel an existing Study Room</a>
+                    <a href="/cancelation" class="rvt-button">Cancel an existing Study Room</a>
     
                   </div>
     
