--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="robots" content="noindex">
         <title>Student Info</title>
-        <link href="https://assets.iu.edu/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+        <link rel="shortcut icon" type="image/jpg" href="/Users/jeanredfern/Documents/IUK Spring 2022/Dev & Design/CapstoneProject/views/images/favicon.jpg"/>
         <link rel="stylesheet" href="https://unpkg.com/rivet-core@2.0.0-beta.2/css/rivet.min.css">
       </head>
       <body class="rvt-layout">
@@ -93,18 +93,10 @@
   <main id="main-content" class="rvt-layout__wrapper">
 
 
-    <h1>Confirmation</h1>
+  <h1>Confirmation</h1>
+<p>thank you</p>
   
-  <!-- Confirmation alert -->
-   
-  
-  <!-- Button to go back to welcome page -->  
-  <div class="button">
-      <a href = "/"><button class="rvt-button">Return To Home</button>    
-  </div>
-    
-    
-   </main>
+ </main>
 
 <!-- **************************************************************************
     Footer: Copyright
