--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -118,8 +118,9 @@
   <form><input type="text" size = "10" minlength ="10" maxlength="10"></form><br>
   <p>CONFIRMATION NUMBER: </p>
   <form><input type="text" size = "10" minlength = "7" maxlength="7"></form><br>
-  <a href="/confirmcancelation"><button class ="button">CONFIRM</button></a>
-  <a href="/"><button class ="button">RETURN TO HOME</button></a>
+  <div>
+    <a href = "/"><button class="rvt-button">Go Back </button></a>  <a href="/confirmcancelation"><button class="rvt-button rvt-button--success">Submit </button></a>  
+    </div>
 </body>
 
 
