--- a/views/confirmcancelation.html
+++ b/views/confirmcancelation.html
@@ -92,7 +92,9 @@
 <body>
   <h1>STUDY ROOM RESERVATIONS</h1>
 <p>Your Study Room Appointment has been cancelled</p>
-  <p><a href="/"><button class ="button">RETURN TO HOME</button></a></p>
+<div>
+    <a href = "/"><button class="rvt-button">Go Home </button></a>
+</div>
 </body>
 <footer class="rvt-footer-base">
   <div class="rvt-container-lg">
