--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -149,14 +149,11 @@
                     <a class="rvt-footer-base__link" href="https://accessibility.iu.edu/assistance/">Accessibility</a>
                 </li>
                 <li class="rvt-footer-base__item">
-                    <a class="rvt-footer-base__link" href="#0">Privacy Notice</a>
+                    <a class="rvt-footer-base__link" href="https://www.iuk.edu/uits/privacy-policy.html/">Privacy Notice</a>
                 </li>
                 <li class="rvt-footer-base__item">
-                    <a class="rvt-footer-base__link" href="#0">Copyright</a> © 2021 The Trustees of <a class="rvt-footer-base__link" href="https://www.iu.edu">Indiana University</a>
+                    Copyright</a> © 2021 The Trustees of Indiana University
                 </li>
-                <li class="rvt-footer-base__item">
-                  <a class="rvt-footer-base__link" href="#0">Created by Ogre, Inc</a>
-              </li>
             </ul>
         </div>
     </div>
