--- a/views/confirmcancelation.html
+++ b/views/confirmcancelation.html
@@ -105,19 +105,16 @@
               </svg>
           </div>
           <ul class="rvt-footer-base__list">
-              <li class="rvt-footer-base__item">
-                  <a class="rvt-footer-base__link" href="https://accessibility.iu.edu/assistance/">Accessibility</a>
-              </li>
-              <li class="rvt-footer-base__item">
-                  <a class="rvt-footer-base__link" href="#0">Privacy Notice</a>
-              </li>
-              <li class="rvt-footer-base__item">
-                  <a class="rvt-footer-base__link" href="#0">Copyright</a> © 2021 The Trustees of <a class="rvt-footer-base__link" href="https://www.iu.edu">Indiana University</a>
-              </li>
-              <li class="rvt-footer-base__item">
-                <a class="rvt-footer-base__link" href="#0">Created by Ogre, Inc</a>
+            <li class="rvt-footer-base__item">
+                <a class="rvt-footer-base__link" href="https://accessibility.iu.edu/assistance/">Accessibility</a>
             </li>
-          </ul>
+            <li class="rvt-footer-base__item">
+                <a class="rvt-footer-base__link" href="https://www.iuk.edu/uits/privacy-policy.html/">Privacy Notice</a>
+            </li>
+            <li class="rvt-footer-base__item">
+                Copyright</a> © 2021 The Trustees of Indiana University
+            </li>
+        </ul>
       </div>
   </div>
 </footer>
