--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -117,6 +117,13 @@
 
 
   <h1>Confirmation</h1>
+  <p>Thank you for making your reservation at the IUK library. <br>
+      An email with your confirmation number has been sent.<br><br>    
+    The date of your reservation is: MM/DD/YYYY <br>
+    The time of your reservation is: 00:00<br>
+    Your room number is: KAXXX<br>
+    Your confirmation number is: XXXXXXX    
+</p>
 
   <footer class="rvt-footer-base">
     <div class="rvt-container-lg">
