--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -117,7 +117,7 @@
 
 
   <h1>Confirmation</h1>
-  <img src = "/public/Icons8_flat_approval.png"
+  <img src = "/public/Icons8_flat_approval.png">
   <p>Thank you for making your reservation at the IUK library. <br>
       An email with your confirmation number has been sent.<br><br>    
     The date of your reservation is: MM/DD/YYYY <br>
