--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -114,7 +114,7 @@
   </header>
   <!--Main content area-->
   <main id="main-content" class="rvt-layout__wrapper">
-
+    <img src="/Icons8_flat_approval.png">
 
   <h1>Confirmation</h1>
   <p>Thank you for making your reservation at the IUK library. <br>
