--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -117,13 +117,14 @@
     
 
   <h1>Confirmation</h1>
+  <img src="/Icons8_flat_approval.png" class ="center"> 
   <p>Thank you for making your reservation at the IUK library. <br>
       An email with your confirmation number has been sent.<br><br>    
     The date of your reservation is: MM/DD/YYYY <br>
     The time of your reservation is: 00:00<br>
     Your room number is: KAXXX<br>
     Your confirmation number is: XXXXXXX
-    <img src="/Icons8_flat_approval.png">  
+     
 </p>
 
   <footer class="rvt-footer-base">
