--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -117,8 +117,9 @@
     
 
   <h1>Confirmation</h1>
-  <img style="width:100%" src="/Icons8_flat_approval.png"> 
-  <p>Thank you for making your reservation at the IUK library. <br>
+  <img style="width:40%" src="/Icons8_flat_approval.png"> 
+  <p>
+      Thank you for making your reservation at the IUK library. <br>
       An email with your confirmation number has been sent.<br><br>    
     The date of your reservation is: MM/DD/YYYY <br>
     The time of your reservation is: 00:00<br>
