--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -90,8 +90,9 @@
           </div>
       </div>
       <style>
-        img {
-          
+        img{
+            margin-left: auto;
+            margin-right: auto;
           width: 50px;  
           height: 50px;
           }
