--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -93,8 +93,8 @@
         img{
             margin-left: auto;
             margin-right: auto;
-          width: 50px;  
-          height: 50px;
+          width: 10%;  
+          height: 10%;
           }
     
         h1 {
@@ -126,7 +126,7 @@
     The time of your reservation is: 00:00<br>
     Your room number is: KAXXX<br>
     Your confirmation number is: XXXXXXX
-    <img style="width:10%" src="/Icons8_flat_approval.png"> 
+    <img src="/Icons8_flat_approval.png"> 
 </p>
 
   <footer class="rvt-footer-base">
