--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -128,7 +128,10 @@
     Your confirmation number is: XXXXXXX
     <img src="/Icons8_flat_approval.png"> 
 </p>
-
+<div>
+    <a href = "/"><button class="rvt-button">Go Home </button></a>
+</div>
+  </main>
   <footer class="rvt-footer-base">
     <div class="rvt-container-lg">
         <div class="rvt-footer-base__inner">
