--- a/views/confirmcancelation.html
+++ b/views/confirmcancelation.html
@@ -88,6 +88,28 @@
               </div>
           </div>
       </div>
+      <style>
+        img {
+          float:left;
+          width: 50px;  
+          height: 50px;
+          }
+    
+        h1 {
+          font-size: xx-large;
+          font-weight: bold;
+          }
+    
+        body{
+          text-align: center;
+          font-size: medium;
+        }
+    
+        div{
+          text-align: center;
+        }
+      </style>
+    </header>
   </header>
 <body>
   <h1>STUDY ROOM RESERVATIONS</h1>
