--- a/views/confirmcancelation.html
+++ b/views/confirmcancelation.html
@@ -89,10 +89,11 @@
           </div>
       </div>
       <style>
-        img {
-          float:left;
-          width: 50px;  
-          height: 50px;
+        img{
+            margin-left: auto;
+            margin-right: auto;
+          width: 10%;  
+          height: 10%;
           }
     
         h1 {
@@ -114,6 +115,7 @@
 <body>
   <h1>STUDY ROOM RESERVATIONS</h1>
 <p>Your Study Room Appointment has been cancelled</p>
+<img src="/Icons8_flat_approval.png"> 
 <div>
     <a href = "/"><button class="rvt-button">Go Home </button></a>
 </div>
