--- a/views/confirmcancelation.html
+++ b/views/confirmcancelation.html
@@ -114,7 +114,10 @@
   </header>
 <body>
   <h1>STUDY ROOM RESERVATIONS</h1>
-<p>Your Study Room Appointment has been cancelled</p>
+<p>Your study room appointment has been cancelled.<br>
+    To make another reservation, please click "Go Home"<br>
+    and fill out a new form.
+</p>
 <img src="/Icons8_flat_approval.png"> 
 <div>
     <a href = "/"><button class="rvt-button">Go Home </button></a>
