--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -126,7 +126,7 @@
     The time of your reservation is: 00:00<br>
     Your room number is: KAXXX<br>
     Your confirmation number is: XXXXXXX
-    <img src="/Icons8_flat_approval.png"> 
+    <img src="/images/Icons8_flat_approval.png"> 
 </p>
 <div>
     <a href = "/"><button class="rvt-button">Go Home </button></a>
