--- a/views/confirmcancelation.html
+++ b/views/confirmcancelation.html
@@ -118,7 +118,7 @@
     To make another reservation, please click "Go Home"<br>
     and fill out a new form.
 </p>
-<img src="/Icons8_flat_approval.png"> 
+<img src="/images/Icons8_flat_approval.png"> 
 <div>
     <a href = "/"><button class="rvt-button">Go Home </button></a>
 </div>
