--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -118,11 +118,8 @@
     
 
   <h1>Confirmation</h1>
-<<<<<<< HEAD
-  <img src = "public/Icons8_flat_approval.png"
-<p>thank you</p>
-=======
->>>>>>> 6ba6afb79cf665dbbb639328f18ce77fb08cd86e
+  <img src = "public/Icons8_flat_approval.png">
+  <p>thank you</p>
   
   <p>
     Thank you for making your reservation at the IUK library. <br>
