reservation data completed

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -125,7 +125,7 @@
   <h2>Room Information</h2>
   <p>Please enter the following information:</p>
 
-  <form method="post" action="/resInfo/add">
+  <form method="post" action="/reservations">
     
     <fieldset>
     <label for="date" class="rvt-label">Enter the date of the study room reservation:</label><br>
@@ -164,11 +164,11 @@
         
     </br>
     </fieldset>
+    <a href = "/"><button class="rvt-button">Go Back </button></a> <input type="submit" class="rvt-button rvt-button--success" value="Add Reservation" />
   </form>
   <div>
-  <a href = "/"><button class="rvt-button">Go Back </button></a> <a href="/studentinfo"><button class="rvt-button rvt-button--success">Continue </button></a><br><br>
-</div>
-</body>
+  
+
 
 <footer class="rvt-footer-base">
   <div class="rvt-container-lg">
