--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -114,13 +114,17 @@
 <p>To cancel your study room reservation, enter the following information<br>
    and click "Confirm". If you do NOT wish to cancel your study room<br>
     reservation click "Return to Home."</p>
-  <p>STUDENT ID NUMBER: </p>
-  <form><input type="text" size = "10" minlength ="10" maxlength="10"></form><br>
+<form method="post" action="/cancelation">    
+    <fieldset>
+    <p>STUDENT ID NUMBER: </p>
+  <label for="idnum" class="rvt-label">Student ID Number</label><br>
+  <input type="number" id="idnum" name="idnum" class="rvt-label" placeholder="0123456789" maxlength=10><br><br>
   <p>CONFIRMATION NUMBER: </p>
-  <form><input type="text" size = "10" minlength = "7" maxlength="7"></form><br>
-  <div>
-    <a href = "/"><button class="rvt-button">Go Back </button></a>  <a href="/confirmcancelation"><button class="rvt-button rvt-button--success">Submit </button></a>  
-    </div>
+  <label for="confirmation" class="rvt-label">Confirmation Number</label><br>
+  <input type="number" id="confirmation" name="confirmation" class="rvt-label" placeholder="98765" maxlength=5><br><br>
+  </fieldset>
+    <a href = "/"><button class="rvt-button">Go Back </button></a> <input type="submit" class="rvt-button rvt-button--success" value="Add Cancelation" />
+</form>
 </body>
 
 
