setup for table

--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -123,11 +123,14 @@
   
   <p>
     Thank you for making your reservation at the IUK library. <br>
-    An email with your confirmation number has been sent.<br><br>    
-    The date of your reservation is: <div id="rDate"></div><br>
-    The time of your reservation is: <div id="rTime"></div><br>
-    Your room number is: <div id="roomNum"></div><br>
-    Your confirmation number is: <div id="conNum"></div>
+    An email with your confirmation number has been sent.<br><br>
+    
+    
+    The date of your reservation is:           <div id="rDate"></div>
+    The time of your reservation is:           <div id="rTime"></div><br>
+    Your room number is:                      <div id="roomNum"></div><br>
+    Your confirmation number is:              <div id="conNum"></div>
+
     <img src="/images/Icons8_flat_approval.png"> 
 </p>
 <script>
